Patch to fix DSpot reported issue #711 (#65)
* Patch to fix DSpot reported issue #711

* Added support for EntryPoint.outPrintStream. Fixing deadlock when verbose is disabled

* replacing identation tabs with spaces